--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/solution_tv"
-        android:text="0"
+        android:text=""
         android:textSize="30dp"
         android:textAlignment="textEnd"
         android:gravity="end"
